# sample-oracle-modernization-accelerator

./: .gitignore  .initOMA.env  LICENSES.md  OMA.properties  QUICKSTART.md  QUICKSTART_KR.md  README.md  README_KR.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_V2.md  generate_menu_docs.md  initOMA.sh  oma_env_jpetstore-6.sh  setup.sh
01.Database/: README.md
99.Templates/: AP01.Discovery.txt  AP01.DiscoveryTemplate.html  AP01.GenMapperList.txt  AP02.GenSQLTransformTarget.py  AP03.SQLTransformTarget(KO).txt  AP03.SQLTransformTarget.py  AP03.SQLTransformTarget.txt  AP03.TransformReport.txt  AP03.TransformValidation.py  AP03.xmlExtractor.py  AP04.Convert_java.sh  AP04.SQLPattern_analyzer.py  DB01.asct.py  TST00.README.md  (+4 more)
schema/: CLAUDE.md  README.md  README_KR.md  main.py  migration-config.json  pyproject.toml  requirements.txt  run_data_migration_only.py  test_db_independence.py  test_imports.py
schema/common/orchestrator/: context_budget.py  cost_tracker.py  design_gate.py  hooks.py  pipeline.py  state.py  telemetry.py
schema/common/rules/: patterns.py  rule_engine.py
schema/common/tools/: analysis_tools.py  dms_full_load_tools.py  dms_sc_tools.py  dms_tools.py  mybatis_tools.py  oracle_tools.py  rag_tools.py  reference_tools.py
schema/mysql/agents/: __init__.py  chat_assistant.py  code_migrator.py  data_migrator.py  data_verifier.py  discovery.py  evaluator.py  factory.py  qa_verifier.py  remediation.py  report.py  schema_architect.py
schema/mysql/orchestrator/: package_swarm.py  sql_subgraph.py
schema/mysql/rules/: static_rules.py
schema/mysql/scripts/: run_migration.py
schema/mysql/tools/: data_transfer_tools.py  mysql_tools.py  mysql_tools.py.bak
schema/postgresql/: migration_result.json
schema/postgresql/agents/: __init__.py  chat_assistant.py  code_migrator.py  data_migrator.py  data_verifier.py  discovery.py  evaluator.py  factory.py  qa_verifier.py  remediation.py  report.py  schema_architect.py
schema/postgresql/orchestrator/: package_swarm.py  sql_subgraph.py
schema/postgresql/rules/: oracle_compat_library.py  static_rules.py
schema/postgresql/scripts/: run_migration.py
schema/postgresql/scripts/reports/: migration_report_oma-1781_20260617_045433.html
schema/postgresql/tools/: data_transfer_tools.py  postgres_tools.py
schema/tools/: constraint_manager.py  conversion_agent.py  dms_load.py  dms_sc.py  extract_sequence_simple.py  extract_sequence_usage.py  number_type_optimizer.py  test_sequence_extractor.sh
(+401 files in other folders)
