[tool.poetry]
name = "oma"
version = "0.1.0"
description = "Oracle Modernization Accelerator - Agentic AI system for Oracle-to-PostgreSQL migration"
authors = ["OMA Team"]
readme = "README.md"
packages = [{include = "oma", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Strands Agents SDK
strands-agents = "^0.1.0"
strands-agents-tools = "^0.1.0"
# FastAPI for REST API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
# Pydantic for data validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Database drivers
asyncpg = "^0.29.0"
oracledb = "^2.0.0"
# XML and code parsing
lxml = "^5.1.0"
tree-sitter = "^0.21.0"
tree-sitter-languages = "^1.10.0"
# AWS Bedrock
boto3 = "^1.34.0"
# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
types-boto3 = "^1.34.0"

[tool.poetry.scripts]
oma = "oma.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter",
    "tree_sitter_languages",
    "oracledb",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/oma",
    "--cov-report=term-missing",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
